tests/regression4-bad.err_exp
regression4-bad.inp:3:20: error: in field #2, field width exceeded
