tests/regression4-bad.inp
a,b,c
"This is a quoted line ....
.... with a break",ddd,eee
",,,,,",     ,fff
